# visual-perception-engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml  pyproject.toml
benchmarking/: postprocessing.py  run_all_measure_time.sh  run_experiments.sh  run_with_gpu_monitoring.py  sanity_check.py  sequential_benchmark.py
benchmarking/helpers/: resource_monitor.py
configs/: benchmark_1.json  benchmark_2.json  benchmark_3.json  benchmark_4.json  benchmark_5.json  benchmark_6.json  benchmark_7.json  benchmark_8.json  benchmark_obj_1.json  benchmark_obj_2.json  benchmark_obj_3.json  benchmark_obj_4.json  benchmark_obj_5.json  benchmark_obj_6.json  benchmark_obj_7.json  benchmark_obj_8.json  default.json  demo.json
docker/: Dockerfile  Dockerfile.agxorin  build_agxorin.sh  build_triton.sh  build_xformers.sh  docker-compose-agxorin.yml  docker-compose.yml  entrypoint.sh  torch2trt_function.sh
include/nn_engine/: engine_node.hpp
include/vp_engine/: engine_node.hpp
include/vp_engine_ros/: engine_node.hpp  engine_wrapper.hpp
launch/: engine_demo.rviz  engine_demo.xml  engine_launch.xml
msg/: ObjectDetectionOutput.msg
resources/: prepare_resources.sh  vid2frames.py
ros_node/: engine_main.cpp  engine_node.cpp  engine_wrapper.cpp  test_input.cpp
schemas/: nn_engine_config.json  vp_engine_config.json
scripts/: benchmark_dav2_metric_vkitti_models.sh  benchmark_dav2_models.sh  generate_dav2_engines.sh  generate_dav2_videos.sh
src/: log.txt
src/benchmarking/: sanity_check.py  sequential_benchmark.py
src/benchmarking/helpers/: resource_monitor.py  transform.py
src/model_architectures/: __init__.py  colormaps.py  custom_trt_module.py  dav2_head.py  dino_foundation_model.py  dpt_head.py  interfaces.py  object_detection_head.py  semantic_segmentation_head.py
src/model_architectures/depth_anything_v2/: dinov2.py  dpt.py  dpt_original.py
src/model_architectures/depth_anything_v2/dinov2_layers/: attention.py  block.py  swiglu_ffn.py
src/model_management/: convert_dav2_into_parts.py  model_cards.py  model_exporter.py  registry.py  util.py
src/nn_engine/: __init__.py  config.py  cuda_buffer.py  cuda_queue.py  cuda_utils.py  dynamic_shape_queue.py  engine.py  example_input.py  foundation_model.py  log_analyzer.py  model_head.py  model_process.py  naming_convention.py  selective_queue.py  threading_utils.py
src/transforms/: __init__.py  abstract_transform.py  default_processing.py  dinov2_preprocessing.py  resize_to_image.py  semseg_postprocessing.py
src/utils/: logging_utils.py  shape_utils.py
src/vp_engine/: __init__.py  buffer.py  config.py  cuda_buffer.py  cuda_queue.py  cuda_utils.py  dynamic_shape_queue.py  engine.py  example_input.py  foundation_model.py  log_analyzer.py  model_head.py  model_process.py  performance_benchmark.py  run.py  threading_utils.py
src/vp_engine/schemas/: vp_engine_config.json
srv/: ChangeModelRate.srv  GetModelNames.srv
tests/: engine_end2end_dav2_test.py  utils.py
tests/resources/configs/: dav2_depth_end2end_test.json
tests/resources/object_detection/outputs/: 20230710_103312.txt
